<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/roomPickerLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Salle">

                <AutoCompleteTextView
                    android:id="@+id/room_Picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:imeOptions="actionNext"
                    android:cursorVisible="false"
                    android:inputType="none"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/datePickerLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"

                    android:focusable="false"
                    android:clickable="false"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choisissez une date" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Heure de la réunion"
                app:layout_constraintTop_toBottomOf="@+id/datePickerLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_picker_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/timePickerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choisissez une horaire" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Thème de la réunion"
                app:layout_constraintTop_toBottomOf="@+id/datePickerLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/theme_picker_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Participants, séparés par une virgule"
                app:layout_constraintTop_toBottomOf="@+id/datePickerLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/peoples_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addMeetingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Créer une réunion" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>