<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/item_list_meeting_name"
        android:layout_width="246dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_colour"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_list_meeting_theme"
        android:layout_width="246dp"
        android:layout_height="19dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/item_list_meeting_people"
        app:layout_constraintEnd_toEndOf="@+id/item_list_meeting_name"
        app:layout_constraintStart_toStartOf="@+id/item_list_meeting_name"
        app:layout_constraintTop_toBottomOf="@+id/item_list_meeting_name" />

    <ImageButton
        android:id="@+id/item_list_meeting_delete_button"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginEnd="12dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <TextView
        android:id="@+id/item_list_meeting_people"
        android:layout_width="246dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/item_list_meeting_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/item_list_meeting_name"
        app:layout_constraintTop_toBottomOf="@+id/item_list_meeting_name"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/item_list_meeting_colour"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>